@@ -1,3 +1,8 @@
+2008-12-10  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/builder.rb: obsolete auto_reload and Rack::Reloader is
+	used.
+
 2008-12-09  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/builder.rb: rackup map.
